[package]
name = "gen_kml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
lazy_static = "1.4.0"
serde = {version = "1.0.144", features = ["derive","rc"]}
serde_json = "1.0.85"
kml = "0.8.5"
tera = "1.11"